--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2024"
 clap = { version = "4.0", features = ["derive"] }
 clap_complete = "4.0"
 inquire = "0.6"  # For interactive service selection
+libc = "0.2"     # For checking root privileges
 
+[corky]
+is_corky_package = true
